tasks 1 and 2 completed

--- a/starter/src/index.html
+++ b/starter/src/index.html
@@ -5,7 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Starter</title>
   </head>
-  <body>
+  <body onchange="Counting()">
     <script src="index.js"></script>
+    <input type="text" name='num1' id='number1'><br>
+    <input type="text" name='num2' id='number2'><br>
+    <input type="text" name='num3' id='number3'><br>
+    <input type="text" name='num4' id='number4'><br>
+    <br><br>
+
+    <label>Sum: <label id='sum'></label></label><br>
+    <label>Average: <label id='avg'></label></label><br>
+    <label>Minimum value: <label id='min'></label></label><br>
+    <label>Maximum value: <label id='max'></label></label><br>
+
+    
   </body>
 </html>
